--- a/css/estilo.css
+++ b/css/estilo.css
@@ -107,7 +107,7 @@ span{
     transition: 0.3s ease;
 }
 .social-icons a:hover{
-    color: black;
+    color: white;
     transform: scale(1.3) translatey(-5px);
     background-color: blueviolet;
     box-shadow: 0 0 25px blueviolet;
@@ -268,17 +268,49 @@ span{
     font-size: 1.7rem;
     line-height: 1.7;
     color: black;
+    flex: 1;
 }
 #servicos{
     background-color: rgb(255, 255, 255);
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+}
+.servicos-texto{
+    flex: 1;
 }
 .servicos-img img{
-    position:relative;
     width: 52vh;
-    cursor: pointer;
-    transition: 0.2s ease;
+    max-width: 100%;
+    transition: 0.3s ease;
 }
-.servicos-img img:hover{
-    transform: scale(1.1) ;
+#formacao{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+}
+.formacao-texto{
+    flex: 1;
+}
+.formacao-img img{
+    width: 52vh;
+    max-width: 100%;
+    transition: 0.3s ease;
+}
+#habilidades{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+}
+.habilidades-texto{
+    flex: 1;
+}
+.habilidades-img img{
+    width: 52vh;
+    max-width: 100%;
+    transition: 0.3s ease;
 }
