--- a/css/estilo.css
+++ b/css/estilo.css
@@ -314,3 +314,73 @@ span{
     max-width: 100%;
     transition: 0.3s ease;
 }
+#Experiencia{
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+}
+.experiencia-texto{
+    flex: 1;
+}
+.experiencia-img img{
+    width: 52vh;
+    max-width: 100%;
+    transition: 0.3s ease;
+}
+#Contatos{
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+}
+.contatos-texto{
+    flex: 1;
+}
+.contatos-img img{
+    width: 32vh;
+    max-width: 100%;
+    transition: 0.3s ease;
+}
+.social-icons a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    background-color: transparent;
+    border: 0.2rem solid blueviolet;
+    border-radius: 50%;
+    margin: 3rem 1.5rem 3rem 0;
+    width: 4rem;
+    height: 4rem;
+    color: blueviolet;
+    transition: 0.3s ease;
+}
+.social-icons a:hover{
+    color: white;
+    transform: scale(1.3) translatey(-5px);
+    background-color: blueviolet;
+    box-shadow: 0 0 25px blueviolet;
+}
+.btn2{
+    display: inline-block;
+    padding: 1rem 2rem;
+    background-color: blueviolet;
+    border: 0.2rem solid blueviolet;
+    border-radius: 4rem;
+    font-size: 1.6rem;
+    color:rgb(255, 255, 255);
+    letter-spacing: 0.3rem;
+    font-weight: 600;
+    transition: 0.3s ease;
+    cursor: pointer;
+    margin-top: 2rem;
+}
+.btn2:hover{
+    color: rgb(255, 255, 255);
+    transform: scale(1.3);
+    background-color: blueviolet;
+    box-shadow: 0 0 25px blueviolet;
+}
