--- a/css/estilo.css
+++ b/css/estilo.css
@@ -190,7 +190,7 @@ span{
         border-bottom: 3px solid blueviolet;
         border-bottom-left-radius: 2rem;
         padding: 1rem;
-        background-color: rgb(29, 12, 61);
+        background-color: white;
         border-top: 0.1rem solid blueviolet;
     }
     nav.active{
@@ -383,4 +383,5 @@ span{
     transform: scale(1.3);
     background-color: blueviolet;
     box-shadow: 0 0 25px blueviolet;
+
 }
